--- a/proj01/p1.html
+++ b/proj01/p1.html
@@ -1,9 +1,12 @@
-<!DOCTYPE html>
-<html>
+<?xml version="1.0" encoding="utf-8"?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
+    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en"
+    lang="en">
 <head>
 	<title>CS142 Project 1, Problem 1</title>
 	<!-- <link rel="stylesheet" type="text/css" href="p1a.css"> -->
-	<link rel="stylesheet" type="text/css" href="p1b.css">
+	<link rel="stylesheet" type="text/css" href="p1b.css"/>
 </head>	
 <body>
 	<div>
